  * d/control: Remove transitional package for dh-systemd.  Thanks
    to Michael Biebl for poking reverse dependencies to migrate and
    getting us ready to remove it.  (Closes: #871312)
  * cmake.pm: Pass VERBOSE=1 to make by default when building to
    ensure that gmock builds are also verbose.  Thanks to
    Johannes Schauer for reporting the issue.  (Closes: #973029)

  [ Michael Biebl ]
  * autoscripts/postrm-systemd-reload-only: Run daemon-reload on
    "remove" only.

 -- Niels Thykier <niels@thykier.net>  Sat, 19 Sep 2020 07:23:08 +0000

debhelper (13.2.1) unstable; urgency=medium

  [ Niels Thykier ]
  * debian/changelog: Fix some typos in previous entries.
  * Dh_Lib.pm,Dh_Buildsystems.pm: Properly clear buildflags with
    --reload-all-buildenv-variables is passed.  Thanks to
    Harald Welte and Guillem Jover for reporting and debugging
    the issue.  (Closes: #966689)
  * dh_missing: Improve message about related files found.  Thanks
    to Diego Escalante for reporting the issue.  (Closes: #966834)

  [ Peter Pentchev ]
  * dh_installalternatives: Correct order of values in the example for
    Dependents links.  (Closes: #966285)

  [ Chris Lamb ]
  * dh_missing: Sort order of missing files to make output
    deterministic.  (Closes: #968187)

  [ Translations ]
  * Update Portuguese translation (Américo Monteiro)  (Closes: #964784)

 -- Niels Thykier <niels@thykier.net>  Sat, 12 Sep 2020 20:27:03 +0000

debhelper (13.2) unstable; urgency=medium

  [ Niels Thykier ]
  * dh_missing: Explicitly remind people that they should not
    copy-waste multi-arch paths directly into debian/not-installed.
    Instead, recommend the use of wildcards of ${DEB_HOST_MULTIARCH}
    to replace the hardcoded value.
  * d/changelog: Clarify what dh_installman change in 13.1 related to
    #958343 was about.
  * Dh_Lib.pm: Add support for raising compat deprecation warnings to
    an error if there are pending removals.  This currently triggers