@@ -19,6 +19,9 @@ debhelper (13.2.2) UNRELEASED; urgency=medium
   * cmake.pm: Pass VERBOSE=1 to make by default when building to
     ensure that gmock builds are also verbose.  Thanks to
     Johannes Schauer for reporting the issue.  (Closes: #973029)
+  * Dh_Lib.pm: Disable "unicode_strings" feature, which caused
+    issues with UTF-8 encoded files.  Thanks to Sebastien Bacher
+    for reporting the issue.  (Closes: #971362)
 
   [ Michael Biebl ]
   * autoscripts/postrm-systemd-reload-only: Run daemon-reload on
